[gd_scene load_steps=27 format=3 uid="uid://crg3oxps7ejta"]

[ext_resource type="Script" uid="uid://7tnil56w35pk" path="res://graph/graph_cube.gd" id="1_0bdpa"]
[ext_resource type="Shader" uid="uid://cv1u6oog1gxqy" path="res://graph/graph_plane.gdshader" id="3_pk28m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0bdpa"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_pk28m"]
material = SubResource("ShaderMaterial_0bdpa")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ty3us"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_ie4pf"]
material = SubResource("ShaderMaterial_ty3us")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_snb8x"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_q6yc6"]
material = SubResource("ShaderMaterial_snb8x")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrjeo"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_b5wph"]
material = SubResource("ShaderMaterial_qrjeo")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dls38"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_6eljt"]
material = SubResource("ShaderMaterial_dls38")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obhqo"]
render_priority = -1
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_ayxtk"]
material = SubResource("ShaderMaterial_obhqo")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6nwi0"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.5
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_rl7ue"]
material = SubResource("ShaderMaterial_6nwi0")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5dixa"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_m6hvs"]
material = SubResource("ShaderMaterial_5dixa")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o61ww"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_vs0b6"]
material = SubResource("ShaderMaterial_o61ww")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ay0yf"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_7dn7n"]
material = SubResource("ShaderMaterial_ay0yf")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_thu3y"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_brw3w"]
material = SubResource("ShaderMaterial_thu3y")
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gl60m"]
render_priority = 0
shader = ExtResource("3_pk28m")
shader_parameter/edge_length = 10.0
shader_parameter/cell_length = 1.0
shader_parameter/line_thickness = 0.05
shader_parameter/edge_thickness = 0.1
shader_parameter/smooth_factor = 0.6200000000000001
shader_parameter/position_offset = Vector2(0, 0)
shader_parameter/line_color = Vector4(0, 0, 0, 0)
shader_parameter/face_color = Vector4(0, 0, 0, 0)
shader_parameter/edge_color = Vector4(0, 0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_a8r7a"]
material = SubResource("ShaderMaterial_gl60m")
size = Vector2(10, 10)

[node name="GraphCube" type="Node3D"]
script = ExtResource("1_0bdpa")
line_color = Color(0.601223, 0.601223, 0.60122293, 1)
line_thickness = 0.05
edge_thickness = 0.1
smooth_factor = 0.6200000000000001

[node name="InsideFaces" type="Node3D" parent="."]

[node name="PlanePosXY" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 5)
mesh = SubResource("PlaneMesh_pk28m")
skeleton = NodePath("../..")

[node name="PlaneNegXY" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, -5)
mesh = SubResource("PlaneMesh_ie4pf")
skeleton = NodePath("../..")

[node name="PlanePosZY" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 5, 0, 0)
mesh = SubResource("PlaneMesh_q6yc6")
skeleton = NodePath("../..")

[node name="PlaneNegZY" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, -5, 0, 0)
mesh = SubResource("PlaneMesh_b5wph")
skeleton = NodePath("../..")

[node name="PlanePosXZ" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(-1, -8.742278e-08, 0, 8.742278e-08, -1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("PlaneMesh_6eljt")
skeleton = NodePath("../..")

[node name="PlaneNegXZ" type="MeshInstance3D" parent="InsideFaces"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
mesh = SubResource("PlaneMesh_ayxtk")
skeleton = NodePath("../..")

[node name="OutsideFaces" type="Node3D" parent="."]

[node name="PlanePosXY" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 5)
mesh = SubResource("PlaneMesh_rl7ue")
skeleton = NodePath("../..")

[node name="PlaneNegXY" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, -5)
mesh = SubResource("PlaneMesh_m6hvs")
skeleton = NodePath("../..")

[node name="PlanePosZY" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, 5, 0, 0)
mesh = SubResource("PlaneMesh_vs0b6")
skeleton = NodePath("../..")

[node name="PlaneNegZY" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -5, 0, 0)
mesh = SubResource("PlaneMesh_7dn7n")
skeleton = NodePath("../..")

[node name="PlanePosXZ" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("PlaneMesh_brw3w")
skeleton = NodePath("../..")

[node name="PlaneNegXZ" type="MeshInstance3D" parent="OutsideFaces"]
transform = Transform3D(1, 0, 0, 0, -1, 8.742278e-08, 0, -8.742278e-08, -1, 0, -5, 0)
mesh = SubResource("PlaneMesh_a8r7a")
skeleton = NodePath("../..")
